@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.chrisvest</groupId>
+    <groupId>org.uniknow</groupId>
     <artifactId>asciidoclet</artifactId>
     <packaging>jar</packaging>
     <version>2.1.0</version>
@@ -147,10 +147,10 @@
                 <configuration>
                     <source>11</source>
                     <additionalJOptions>
-<!--                        <additionalJOption>&#45;&#45;add-exports=jdk.javadoc/jdk.javadoc.internal.tool=asciidoclet</additionalJOption>-->
-<!--                        <additionalJOption>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>-->
-<!--                        <additionalJOption>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=asciidoclet</additionalJOption>-->
-<!--                        <additionalJOption>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=asciidoclet</additionalJOption>-->
+                        <additionalJOption>--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=asciidoclet</additionalJOption>
+                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
+                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=asciidoclet</additionalJOption>
+                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.model=asciidoclet</additionalJOption>
                         <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
                         <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
                         <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
